--- a/client/src/components/main/style.css
+++ b/client/src/components/main/style.css
@@ -1,15 +1,24 @@
 .home-header {
-    background: #eaeaea;
     height: 200px;
+}
+
+.home-header h1 {
+    color: #fff;
+    left: 50%;
+    padding-top: 20px;
+    position: absolute;
+    top: 0;
+    transform: translate(-50%);
+}
+
+.header-image {
+    background-image: url("../../media/homepage-image.png");
+    filter: blur(3px);
+    height: 100%;
 }
 
 body {
     background: #d9d9d9;
-}
-
-.home-header h1 {
-    padding-top: 20px;
-    text-align: center;
 }
 
 .pro-list {
@@ -31,7 +40,7 @@ body {
     bottom: 0;
     display: flex;
     justify-content: space-evenly;
-    position: fixed;
+    position: sticky;
     width: 100%;
     z-index: 999;
 }
