--- a/client/src/components/main/style.css
+++ b/client/src/components/main/style.css
@@ -40,7 +40,7 @@ body {
     bottom: 0;
     display: flex;
     justify-content: space-evenly;
-    position: sticky;
+    position: fixed;
     width: 100%;
     z-index: 999;
 }
